# Pairfq

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Changes  LICENSE  MANIFEST  MYMETA.json  Makefile.PL  README.md  TODO.md  benchmark_results.md  cpanfile  interleaved2pairs.pl  make_fasta_pairs.pl  pairfq  pairfq.pl  pairs_to_interleaved.pl
.github/workflows/: main.yml  release.yml
docs/: distribution.md
scripts/: benchmark.sh  create_benchmark_data.sh  pairfq_lite.pl
src/: main.rs  utils.rs
src/commands/: addinfo.rs  checkpairs.rs  joinpairs.rs  makepairs.rs  mod.rs  splitpairs.rs
t/: 00-load.t  01-tasks.t  02-addinfo.t  03-makepairs.t  04-joinpairs.t  05-splitpairs.t  06-readfiles.t  07-makepairs_from_interl.t
tests/: addinfo.rs  checkpairs.rs  joinpairs.rs  makepairs.rs  makepairs_flexible.rs  splitpairs.rs
tests/common/: mod.rs
utils/: add_pair_info.pl  interleaved_to_pairs.pl  pairs_to_interleaved.pl
